--- a/client/resident_portal.jade
+++ b/client/resident_portal.jade
@@ -252,11 +252,11 @@ template(name='health_club_status')
         +water_status slug='pool'
 
 template(name='health_club_status_small')
-    .ui.small.inline.header upper hot tub
+    .ui.small.inline.grey.header upper hot tub
         +water_status slug='upper_hot_tub'
-    .ui.small.inline.header lower hot tub
+    .ui.small.inline.grey.header lower hot tub
         +water_status slug='lower_hot_tub'
-    .ui.small.inline.header pool
+    .ui.small.inline.grey.header pool
         +water_status slug='pool'
 
 
