--- a/client/client.jade
+++ b/client/client.jade
@@ -1,5 +1,5 @@
 head
-    title GRO
+    title gro
     meta(name='viewport', content='user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
@@ -46,8 +46,11 @@ template(name='layout')
         +shortcut_modal
 
 template(name='mlayout')
-    //- .global_container
-    +yield
+    .global_container(class=invert_class)
+        if currentUser
+            +nav
+        img.ui.fluid.image.checkin_banner(src="{{c.url 'frontrange' width=1000 height=1000 crop='crop'}}")    
+        +yield
 
 
 template(name='verification_confirmation')
