--- a/client/styles.css
+++ b/client/styles.css
@@ -15,7 +15,6 @@ body {
 }
 
 
-
 /* @keyframes shadow-pulse
 {
      0% {
@@ -72,6 +71,10 @@ body {
 
 .zoom{
     transition: transform .1s; /* Animation */
+    /* box-shadow: 0 2px 2px 2px rgba(50, 50, 100, 0.1) !important; */
+}
+.global_container{
+    transition: transform 1s; /* Animation */
     /* box-shadow: 0 2px 2px 2px rgba(50, 50, 100, 0.1) !important; */
 }
 .zoom:hover {
@@ -146,7 +149,7 @@ body {
 }
 
 .invert {
-    filter: invert(100%) !important;
+    filter: invert(80%) !important;
     background-color:white;
     /* height: 100%; */
 }
@@ -298,7 +301,7 @@ input.username_search{
 .button.active {
     /* background-color: rgba(200, 200, 200, 0.5) !important; */
     box-shadow: 0 1px 1px 1px rgba(50, 50, 100, 0.1) !important;
-    background-color: rgba(150, 150, 150, .6) !important;
+    background-color: rgba(43, 33, 0, .9) !important;
     color: white !important;
     /* transform: translate(0, 4px); */
 }
@@ -320,8 +323,8 @@ input.username_search{
 .button:hover {
     /* background-color: rgba(200, 200, 200, 0.5) !important; */
     box-shadow: 0 2px 2px 2px rgba(50, 50, 100, 0.1) !important;
-    background-color: rgba(100, 100, 100, .5) !important;
-    /* color: white !important; */
+    background-color: rgba(43, 33, 0, .9) !important;
+    color: white !important;
     /* transform: translate(0, 4px); */
 }
 
